--- a/notebook/sentiment-analysis.ipynb
+++ b/notebook/sentiment-analysis.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -39,12 +39,25 @@
             "  Downloading textsearch-0.0.24-py2.py3-none-any.whl (7.6 kB)\n",
             "Collecting anyascii (from textsearch>=0.0.21->contractions)\n",
             "  Downloading anyascii-0.3.2-py3-none-any.whl (289 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m289.9/289.9 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting pyahocorasick (from textsearch>=0.0.21->contractions)\n",
-            "  Downloading pyahocorasick-2.0.0-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (110 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m110.8/110.8 kB\u001b[0m \u001b[31m13.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pyahocorasick, anyascii, textsearch, contractions\n",
-            "Successfully installed anyascii-0.3.2 contractions-0.1.73 pyahocorasick-2.0.0 textsearch-0.0.24\n"
+            "     ---------------------------------------- 0.0/289.9 kB ? eta -:--:--\n",
+            "     ---------------------------------------- 0.0/289.9 kB ? eta -:--:--\n",
+            "     - -------------------------------------- 10.2/289.9 kB ? eta -:--:--\n",
+            "     - -------------------------------------- 10.2/289.9 kB ? eta -:--:--\n",
+            "     --- --------------------------------- 30.7/289.9 kB 187.9 kB/s eta 0:00:02\n",
+            "     ----- ------------------------------- 41.0/289.9 kB 164.3 kB/s eta 0:00:02\n",
+            "     ------- ----------------------------- 61.4/289.9 kB 218.8 kB/s eta 0:00:02\n",
+            "     --------- --------------------------- 71.7/289.9 kB 231.8 kB/s eta 0:00:01\n",
+            "     ----------- ------------------------- 92.2/289.9 kB 275.8 kB/s eta 0:00:01\n",
+            "     ------------------- ---------------- 153.6/289.9 kB 353.1 kB/s eta 0:00:01\n",
+            "     ------------------------- ---------- 204.8/289.9 kB 414.8 kB/s eta 0:00:01\n",
+            "     --------------------------- -------- 225.3/289.9 kB 444.3 kB/s eta 0:00:01\n",
+            "     ----------------------------- ------ 235.5/289.9 kB 411.8 kB/s eta 0:00:01\n",
+            "     ------------------------------------ 289.9/289.9 kB 470.8 kB/s eta 0:00:00\n",
+            "Collecting pyahocorasick (from textsearch>=0.0.21->contractions)\n",
+            "  Downloading pyahocorasick-2.0.0-cp311-cp311-win_amd64.whl (39 kB)\n",
+            "Installing collected packages: pyahocorasick, anyascii, textsearch, contractions\n",
+            "Successfully installed anyascii-0.3.2 contractions-0.1.73 pyahocorasick-2.0.0 textsearch-0.0.24\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
