--- a/notebook/sentiment-analysis.ipynb
+++ b/notebook/sentiment-analysis.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,47 +80,39 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting datasets\n",
-            "  Downloading datasets-2.14.4-py3-none-any.whl (519 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m519.3/519.3 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from datasets) (1.23.5)\n",
-            "Requirement already satisfied: pyarrow>=8.0.0 in /usr/local/lib/python3.10/dist-packages (from datasets) (9.0.0)\n",
-            "Collecting dill<0.3.8,>=0.3.0 (from datasets)\n",
-            "  Downloading dill-0.3.7-py3-none-any.whl (115 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.3/115.3 kB\u001b[0m \u001b[31m10.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (from datasets) (1.5.3)\n",
-            "Requirement already satisfied: requests>=2.19.0 in /usr/local/lib/python3.10/dist-packages (from datasets) (2.31.0)\n",
-            "Requirement already satisfied: tqdm>=4.62.1 in /usr/local/lib/python3.10/dist-packages (from datasets) (4.66.1)\n",
-            "Collecting xxhash (from datasets)\n",
-            "  Downloading xxhash-3.3.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (194 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m194.1/194.1 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting multiprocess (from datasets)\n",
-            "  Downloading multiprocess-0.70.15-py310-none-any.whl (134 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m134.8/134.8 kB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: fsspec[http]>=2021.11.1 in /usr/local/lib/python3.10/dist-packages (from datasets) (2023.6.0)\n",
-            "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (from datasets) (3.8.5)\n",
-            "Collecting huggingface-hub<1.0.0,>=0.14.0 (from datasets)\n",
-            "  Downloading huggingface_hub-0.16.4-py3-none-any.whl (268 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m268.8/268.8 kB\u001b[0m \u001b[31m10.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: packaging in /usr/local/lib/python3.10/dist-packages (from datasets) (23.1)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from datasets) (6.0.1)\n",
-            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (23.1.0)\n",
-            "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (3.2.0)\n",
-            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (6.0.4)\n",
-            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (4.0.3)\n",
-            "Requirement already satisfied: yarl<2.0,>=1.0 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.9.2)\n",
-            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.4.0)\n",
-            "Requirement already satisfied: aiosignal>=1.1.2 in /usr/local/lib/python3.10/dist-packages (from aiohttp->datasets) (1.3.1)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (3.12.2)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (4.7.1)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->datasets) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->datasets) (2.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests>=2.19.0->datasets) (2023.7.22)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/dist-packages (from pandas->datasets) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas->datasets) (2023.3)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n",
-            "Installing collected packages: xxhash, dill, multiprocess, huggingface-hub, datasets\n",
-            "Successfully installed datasets-2.14.4 dill-0.3.7 huggingface-hub-0.16.4 multiprocess-0.70.15 xxhash-3.3.0\n"
+            "Requirement already satisfied: datasets in c:\\users\\kobby\\anaconda3\\lib\\site-packages (2.12.0)\n",
+            "Requirement already satisfied: numpy>=1.17 in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from datasets) (1.26.1)\n",
+            "Requirement already satisfied: pyarrow>=8.0.0 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (11.0.0)\n",
+            "Requirement already satisfied: dill<0.3.7,>=0.3.0 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (0.3.6)\n",
+            "Requirement already satisfied: pandas in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from datasets) (2.1.1)\n",
+            "Requirement already satisfied: requests>=2.19.0 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (2.31.0)\n",
+            "Requirement already satisfied: tqdm>=4.62.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (4.65.0)\n",
+            "Requirement already satisfied: xxhash in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (2.0.2)\n",
+            "Requirement already satisfied: multiprocess in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (0.70.14)\n",
+            "Requirement already satisfied: fsspec>=2021.11.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from fsspec[http]>=2021.11.1->datasets) (2023.4.0)\n",
+            "Requirement already satisfied: aiohttp in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (3.8.5)\n",
+            "Requirement already satisfied: huggingface-hub<1.0.0,>=0.11.0 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (0.15.1)\n",
+            "Requirement already satisfied: packaging in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from datasets) (23.2)\n",
+            "Requirement already satisfied: responses<0.19 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (0.13.3)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from datasets) (6.0)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from aiohttp->datasets) (23.1.0)\n",
+            "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from aiohttp->datasets) (2.0.4)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from aiohttp->datasets) (6.0.2)\n",
+            "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from aiohttp->datasets) (4.0.2)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.0 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from aiohttp->datasets) (1.8.1)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from aiohttp->datasets) (1.3.3)\n",
+            "Requirement already satisfied: aiosignal>=1.1.2 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from aiohttp->datasets) (1.2.0)\n",
+            "Requirement already satisfied: filelock in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (3.9.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from huggingface-hub<1.0.0,>=0.11.0->datasets) (4.7.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from requests>=2.19.0->datasets) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from requests>=2.19.0->datasets) (1.26.16)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from requests>=2.19.0->datasets) (2023.11.17)\n",
+            "Requirement already satisfied: six in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from responses<0.19->datasets) (1.16.0)\n",
+            "Requirement already satisfied: colorama in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from tqdm>=4.62.1->datasets) (0.4.6)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from pandas->datasets) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2020.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from pandas->datasets) (2023.3.post1)\n",
+            "Requirement already satisfied: tzdata>=2022.1 in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from pandas->datasets) (2023.3)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
