--- a/notebook/sentiment-analysis.ipynb
+++ b/notebook/sentiment-analysis.ipynb
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -135,31 +135,25 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting transformers\n",
-            "  Downloading transformers-4.32.1-py3-none-any.whl (7.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.5/7.5 MB\u001b[0m \u001b[31m16.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from transformers) (3.12.2)\n",
-            "Requirement already satisfied: huggingface-hub<1.0,>=0.15.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (0.16.4)\n",
-            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (1.23.5)\n",
-            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from transformers) (23.1)\n",
-            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from transformers) (6.0.1)\n",
-            "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.10/dist-packages (from transformers) (2023.6.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from transformers) (2.31.0)\n",
-            "Collecting tokenizers!=0.11.3,<0.14,>=0.11.1 (from transformers)\n",
-            "  Downloading tokenizers-0.13.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (7.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.8/7.8 MB\u001b[0m \u001b[31m41.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting safetensors>=0.3.1 (from transformers)\n",
-            "  Downloading safetensors-0.3.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m47.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.10/dist-packages (from transformers) (4.66.1)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (2023.6.0)\n",
-            "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (4.7.1)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.2.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->transformers) (2023.7.22)\n",
-            "Installing collected packages: tokenizers, safetensors, transformers\n",
-            "Successfully installed safetensors-0.3.3 tokenizers-0.13.3 transformers-4.32.1\n"
+            "Requirement already satisfied: transformers in c:\\users\\kobby\\anaconda3\\lib\\site-packages (4.32.1)\n",
+            "Requirement already satisfied: filelock in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (3.9.0)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.15.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (0.15.1)\n",
+            "Requirement already satisfied: numpy>=1.17 in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from transformers) (1.26.1)\n",
+            "Requirement already satisfied: packaging>=20.0 in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from transformers) (23.2)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (6.0)\n",
+            "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (2022.7.9)\n",
+            "Requirement already satisfied: requests in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (2.31.0)\n",
+            "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (0.13.2)\n",
+            "Requirement already satisfied: safetensors>=0.3.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (0.3.2)\n",
+            "Requirement already satisfied: tqdm>=4.27 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from transformers) (4.65.0)\n",
+            "Requirement already satisfied: fsspec in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (2023.4.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (4.7.1)\n",
+            "Requirement already satisfied: colorama in c:\\users\\kobby\\appdata\\roaming\\python\\python311\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from requests->transformers) (3.4)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from requests->transformers) (1.26.16)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\kobby\\anaconda3\\lib\\site-packages (from requests->transformers) (2023.11.17)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         }
       ],
